chore: fix problems highlighted by Sonar